--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 			<version>8.0.33</version>
 		</dependency>
 		<dependency>
+    		<groupId>org.postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>42.6.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.5.0</version>
@@ -115,7 +120,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>3.3.5</version>
-		</dependency> 
+		</dependency>
 	</dependencies>
 
 	<build>
