--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=artesanas-Hueyapan
-spring.datasource.url=jdbc:mysql://localhost:3306/artesanadb
-spring.datasource.username= root
-spring.datasource.password= Ana123
-spring.jpa.hibernate.ddl-auto= none
+#spring.datasource.url=jdbc:mysql://localhost:3306/artesanadb
+#spring.datasource.username= root
+#spring.datasource.password= Ana123
+#spring.jpa.hibernate.ddl-auto= none
+
+spring.jpa.hibernate.ddl-auto= update
+spring.datasource.url=jdbc:postgresql://dpg-ct7m352j1k6c73cjhdtg-a.oregon-postgres.render.com:5432/artesanas
+spring.datasource.username=ana
+spring.datasource.password=DPDWQZ1XgZAGDVGpBuUHuvObVAtT8JdE
 
 springdoc.api-docs.enabled = true
 springdoc.swagger-ui.enabled = true
 springdoc.swagger-ui.path = /doc/swagger-ui.html
 springdoc.packagesToScan = artesanas.artesanas
+
