--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=artesanas-Hueyapan
 #spring.datasource.password= Ana123
 #spring.jpa.hibernate.ddl-auto= none
 
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= none
 spring.datasource.url=jdbc:postgresql://dpg-ct7m352j1k6c73cjhdtg-a.oregon-postgres.render.com:5432/artesanas
 spring.datasource.username=ana
 spring.datasource.password=DPDWQZ1XgZAGDVGpBuUHuvObVAtT8JdE
